tests/snapshots/structure__package__fail__package_bin_target.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure
--package
foobar

STDERR:
Error: No package found with name "foobar".

Packages present in workspace:
- package_bin_target


STDOUT:
