tests/snapshots/structure__package__fail__package_lib_target.snap
---
source: tests/structure.rs
expression: output
---
STDERR:
Error: No package found with name "foobar".

Packages present in workspace:
- package_lib_target


STDOUT:

