tests/snapshots/structure__package__fail__virtual_workspace_multi_package.snap
---
source: tests/structure.rs
expression: output
snapshot_kind: text
---
COMMAND:
structure
--package
foobar

STDERR:
Error: No package found with name "foobar".

Packages present in workspace:
- package_bin_target
- package_lib_target
- package_multi_target


STDOUT:
