tests/snapshots/structure__package__fail__workspace_multi_package.snap
---
source: tests/structure.rs
expression: output
snapshot_kind: text
---
COMMAND:
structure
--package
foobar

STDERR:
Error: No package found with name "foobar".

Packages present in workspace:
- workspace_multi_package
- package_bin_target
- package_lib_target
- package_multi_target


STDOUT:
